[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15.0"
url = "2.3.1"
walkdir = "2.3.2"
rust-code-analysis = "0.0.24"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
home = "0.5.4"

sha2 = "0.10.6"
data-encoding = "2.3.3"
rayon = "1.6.1"
axum = "0.6.3"
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"
serde_json = "1.0.91"
simple_logger = "4.0.0"
