[package]
name = "waking-git-core"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Library implementing the core functionality of waking-git"
repository = "https://github.com/elhmn/waking-git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
types = []
default = ["types", "dep:rust-code-analysis"]

[dependencies]
git2 = "0.15.0"
url = "2.3.1"
walkdir = "2.3.2"
# rust-code-analysis is made unavailable by default as we want to avoid
# wasm compilation issues related to tree-sitter, see:
# https://github.com/tree-sitter/tree-sitter/discussions/2010
rust-code-analysis = { version = "0.0.25", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
home = "0.5.4"

sha2 = "0.10.6"
data-encoding = "2.3.3"
rayon = "1.6.1"
axum = "0.6.3"
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"
serde_json = "1.0.91"
simple_logger = "4.0.0"
tar = "0.4.38"
flate2 = "1.0.25"
lazy_static = "1.4.0"
tokio-util = { version = "0.7.5", features = ["io"] }
